recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:14: error: not found: value snowsSide
    snowsSide(levels -1,length/3)
    ^Koch:16: error: not found: value snowsSide
    snowsSide(levels -1,length/3)
    ^Koch:18: error: not found: value snowsSide
    snowsSide(levels -1,length/3)
    ^Koch:20: error: not found: value snowsSide
    snowsSide(levels -1,length/3)
    ^